# hermes-on-glass

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gradle.properties  local.properties.template  settings.gradle.kts
glasses-app/: build.gradle.kts  proguard-rules.pro
glasses-app/src/main/: AndroidManifest.xml
glasses-app/src/main/kotlin/dev/wallner/hermesonglass/glasses/: GlassesApp.kt  MainActivity.kt
gradle/: libs.versions.toml
hermes-channel-adapter/: README.md  __init__.py  adapter.py  config.py  connection.py  frames.py  plugin.yaml  pyproject.toml  tool_progress.py
hermes-channel-adapter/tests/: conftest.py  test_e2e_ws.py  test_frames.py  test_tool_progress.py
openspec/changes/cxr-l-phone-migration/: design.md  proposal.md  tasks.md
openspec/changes/cxr-l-phone-migration/specs/phone-bridge/: spec.md
openspec/changes/initial-mvp/: design.md  proposal.md  tasks.md
openspec/changes/initial-mvp/specs/glasses-channel-plugin/: spec.md
openspec/changes/initial-mvp/specs/glasses-hud/: spec.md
openspec/changes/initial-mvp/specs/hermes-client-protocol/: spec.md
openspec/changes/initial-mvp/specs/phone-bridge/: spec.md
phone-app/: build.gradle.kts  proguard-rules.pro
phone-app/src/main/: AndroidManifest.xml
phone-app/src/main/kotlin/dev/wallner/hermesonglass/phone/: HermesApp.kt  MainActivity.kt
phone-app/src/main/res/xml/: network_security_config.xml
shared/: build.gradle.kts
shared/src/main/kotlin/dev/wallner/hermesonglass/shared/: CapsEnvelopes.kt  FrameParser.kt  WsFrames.kt
(+70 files in other folders)
